--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,13 @@ html {
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "visby CF";
+  src: url("/fonts/Visby CF/VisbyCF-Bold.eot") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
 /* WRAPPER */
 
@@ -244,7 +251,7 @@ header li a {
   font-size: 45px;
   color: #000000;
   max-width: 800px;
-  line-height: 1em;
+  line-height: 1.4em;
 }
 
 #intro {
@@ -440,4 +447,12 @@ margin-left: 2rem;
   #cta-banner h3 {
     line-height: 1.3;
   }
+}
+#center-content{
+  position: relative;
+  width: 100%;
+  height: 80rem;
+  background-color: #ffffff;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
 }
