--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,6 @@ html {
   max-width: 1300px;
   padding: 0 2rem;
   margin: auto;
-  position: relative;
 }
 
 body {
@@ -66,76 +65,6 @@ body {
 .align-center {
   text-align: center;
 }
-
-/* FORM STYLES 
-  You could also target type=password etc
-
-  input[type=text] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: 2px solid red;
-  border-radius: 4px;
-  background-color: #3CBC8D;
-  color: white;
-} */
-
-/*
-By default, some browsers will add a blue outline around the input when it gets focus 
-(clicked on). You can remove this behavior by adding outline: none; to the input.
-
-input[type=text]:focus {
-  background-color: lightblue;
-  border: 3px solid #555;
-} 
-
-INPUT WITH ICON/IMAGE
-
-input[type=text] {
-  background-color: white;
-  background-image: url('searchicon.png');
-  background-position: 10px 10px;
-  background-repeat: no-repeat;
-  padding-left: 40px;
-}
-
-TEXTAREA
-
-textarea {
-  width: 100%;
-  height: 150px;
-  padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  resize: none;
-}
-
-SELECT MENUS
-
-select {
-  width: 100%;
-  padding: 16px 20px;
-  border: none;
-  border-radius: 4px;
-  background-color: #f1f1f1;
-}
-
-INPUT BUTTONS
-
-input[type=button], input[type=submit], input[type=reset] {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-decoration: none;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-
-*/
 
 /* HEADER */
 
@@ -195,8 +124,9 @@ header li a {
 
 #banner {
   position: relative;
-  height: calc(100vh - 110px);
+
   max-height: 590px;
+  align-items: center;
   text-align: center;
   background: center no-repeat url("/img/banner_bg.svg");
   bottom: 7rem;
@@ -206,14 +136,14 @@ header li a {
   position: relative;
   text-align: center;
   font-family: "Visby CFHeavy";
+  margin-top: 3rem;
 }
 
 #intro-text h1 {
-  position: relative;
   font-size: 45px;
   color: #000000;
-  max-width: 900px;
-  line-height: 1.4em;
+  line-height: 3rem;
+  text-align: center;
 }
 
 #intro {
@@ -230,16 +160,278 @@ header li a {
   padding-top: 10px;
 }
 
+.top-bg{
+  position: relative;
+  display: inline;
+}
+
+#phonebg{
+  position: absolute;
+  height: 30rem;
+}
+
+#backbg{
+  position: relative;
+  height: 40rem;
+  margin-left: 25rem;
+}
+
+#fontbg{
+  position: relative;
+  height: 40rem;
+  bottom: 35rem;
+  margin-left: 13rem;
+}
+
+#oilbg{
+  position: relative;
+  float: right;
+  height: 9rem;
+  bottom: 25rem;
+}
+
+#center-content{
+  position: relative;
+  width: 100%;
+  height: 50rem;
+  background-color: #ffffff;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
+  bottom: 45rem;
+}
+
+#centeral {
+  position: absolute;
+  margin-top: 4rem;
+  margin-left: 15rem;
+}
+
+#center-circle{
+  position: absolute;
+  width: 30rem;
+  height: 30rem;
+  border-radius: 100%;
+  background-color: #000000;
+  text-align: center;
+  margin: 3rem 13rem;
+  opacity: 10%;
+}
+
+#centeral h1{
+  position: relative;
+}
+
+#centeral h2{
+  position: relative;
+  top:13rem;
+  font-size: 2.7rem;
+  line-height: 3rem;
+}
+
+#centeral p{
+  position:relative;
+  max-width: 600px;
+  margin-left: 30rem;
+  bottom: 1.5rem;
+}
+
+#centeral img{
+  position: relative;
+  width: 45rem;
+  margin: 10rem;
+  height: 40rem;
+  bottom: 37rem;
+  right: 14rem;
+}
+
+.requestbtn a{
+  position: absolute;
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+  background-color: #F7AA28;
+  border:  1px solid transparent;
+  margin: 0rem 25rem;
+  margin-top: 12rem;
+  font-size: 0.75rem;
+  background-color:#F7AA28;
+  color: #ffffff;
+  padding: 7px 35px;
+  text-decoration: none;
+  border-radius: 3px;
+}
+
+#pricing{
+  position: relative;
+  margin-left: 15rem;
+  bottom: 40rem;
+}
+
+#Testmonial{
+  position: relative;
+  width: 100%;
+  height: 65rem;
+  background-color: #F7F9FA;
+}
+
+#Testmonial h1{
+  position: absolute;
+  margin-left: 20rem;
+  margin-top: 5rem;
+}
+
+#Testmonial p{
+  position: absolute;
+  margin-left: 40rem;
+  margin-top: 10rem;
+  max-width: 320px;
+}
+
+#Testmonial h2{
+  position: absolute;
+  margin-left: 40rem;
+  margin-top: 20rem;
+}
+
+#Testmonial h3{
+  position: absolute;
+  margin-left: 40rem;
+  margin-top: 21.5rem;
+}
+
+.profile{
+  position: absolute;
+  margin-left: 10rem;
+  margin-top: 9rem;
+}
+
+.profile-bg {
+  position: absolute;
+  margin-left: 15rem;
+  margin-top: 12rem;
+}
+
+.profile1{
+  position: absolute;
+  margin-left: 10rem;
+  margin-top: 2rem;
+}
+
+.profile-bg1 {
+  position: absolute;
+  margin-left: 15rem;
+  margin-top: 2rem;
+}
+
+.comments p{
+  position: absolute;
+  margin-left: 40rem;
+  margin-top: 2rem;
+  max-width: 320px;
+}
+
+#profile-bg{
+  width: 15rem;
+}
+
+#profile-pic{
+  width: 15rem;
+}
+/* faq */
+
+#faqs {
+    position: relative;
+    background-color: white;
+    width: 100%;
+}
+
+#faqs-heading h1{
+  position: absolute;
+  margin-left: 17rem;
+  margin-top: -4rem;
+}
+
+#faqs-heading p{
+  position: absolute;
+  margin-top: 10rem;
+  margin-left: 10rem;
+  font-size: 2rem;
+  max-width: 220px;
+  line-height: 3rem;
+}
+
+
+.bg-footer1 img{
+  position: absolute; 
+  width: 39rem;
+  height: 30rem;
+}
+
+#accordions {
+  margin: 7rem auto;
+  width: 55%;
+  margin-right: 5rem;
+  z-index: 4;
+}
+
+.accordion {
+  background: #f7f9fa;
+  padding: 1rem 1.2rem;
+  margin-bottom: 1rem;
+  border: 1px solid #caced1;
+  border-radius: 4px;
+  overflow: hidden;
+  width: 100%;
+  text-align: left;
+}
+
+.accordion h3 {
+  position: relative;
+  /* background-color: #f7f9fa; */
+  color: #363a42;
+  cursor: pointer;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-family: "Visby CF";
+  font-size: 1.125em;
+  display: flex;
+  align-items: center;
+}
+
+.accordion h3:after {
+  content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='13' height='13' fill='%23000' class='bi bi-chevron-down' viewBox='0 0 16 16'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
+  position: absolute;
+  right: 0;
+  transform-origin: center center;
+  transition: 0.35s ease-out;
+}
+
+.accordion.open h3:after {
+  transform: rotate(90deg);
+}
+
+.accordion .panel {
+  background-color: #f7f9fa;
+  color: #707070;
+  overflow: hidden;
+}
+
+.panel p {
+  font-family: "Visby CF";
+  font-size: 0.875rem;
+  line-height: 1.8;
+  margin-top: 10px;
+}
+
+.accordion:not(.open) .panel {
+  max-height: 0;
+}
 
 /* OTHER SECTION */
 
-/* OTHER SECTION */
-
-/* OTHER SECTION */
-
-/* OTHER SECTION */
-
-.course-button a {
+.course-button a{
+  position: relative;
   font-size: 0.75rem;
   background-color:#0A284C;
   color: #ffffff;
@@ -270,42 +462,130 @@ header li a {
 /* FOOTER */
 #footer-top {
   position: relative;
-  display: inline-flex;
   padding: 2rem 0;
+  width: 100%;
+  display: inline-flex;
 }
 
-#contact-us{
-margin-left: 2rem;
+#footer-form{
+  position: relative;
+  margin-left: 9rem;
+  margin-bottom: 3rem;
+  margin-top: 4rem;
+  z-index: 7;
+}
+#detail{
+  height: 2rem;
+  margin: 0.3rem 0rem;
+  width: 32rem;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #0A284C;
+  padding-left: 1rem;
 }
 
-#offices{
-  margin-left: 20rem;
+#details{
+  height: 2rem;
+  width: 32rem;
+  margin-top: 0.4rem;
+  background-color: transparent;
+  padding-bottom: 8rem;
+  border-radius: 4px;
+  border: 1px solid #0A284C;
+  padding-left: 1rem;
+  margin-bottom: 1rem;
 }
 
-#subscribe{
-  margin-left: 20rem;
-}
-
-#email{
-  padding: 5px 4px;
-  border: 1px solid #F7AA28;
-  border-right: 1.5rem solid #F7AA28;
-}
-#footer-bottom {
-  background-color: #F7AA28;
+input::placeholder{
   color: #0A284C;
-  padding: 0.5rem 0;
+  background-color: transparent;
+}
+
+#submit-btn{
+  position: relative;
+  cursor: pointer;
+  text-decoration: none;
+  margin-top: 2rem;
+  z-index: 3;
+}
+
+#footer-contect{
+  position: relative;
+  margin-left: 8rem; 
+  margin-top: 3.5rem;
+}
+
+.Top-content{
+  position: relative;
+}
+
+.Top-content h1{
+  position: absolute;
+  font-family: "Visby CFHeavy";
+  font-size: 1.3rem;
+  font-weight: bolder;
+}
+
+.Top-content h1::before{
+  content:"";
+  position: absolute;
+  margin-left: -7rem;
+  bottom: 10px;
+  width: 100px;
+  height: 4px;
+  background-color: #F7AA28;
+}
+
+#contact-banner h2{
+  position: absolute;
+  top: 5rem;
+  text-align: right;
+  font-family: "Visby CFHeavy";
+  font-size: 2.3rem;
+  line-height: 2.5rem;
+}
+
+#contact-banner ul{
+  position:relative;
+  top: 12rem;
+  font-family: "Visby CF";
+  text-align: right;
+}
+
+#contact-banner li{
+  position: relative;
+  font-weight: lighter;
+}
+
+#footer-bottom{
+  position: relative;
+  width: 100%;
+  background-color: transparent;
+  border-top:2px solid black ;
+  margin-top: rem;
 }
 
 #copyright-info {
-  font-family: "FuturaPTMedium";
+  position: relative;
+  font-family: "Visby CF";
   font-weight: bold;
   font-size: smaller;
   word-spacing: 0.15rem;
+  text-align: center;
+  margin-top: 1rem;
 }
 
-#social-media > * {
-  margin-left: 1.5rem;
+#social-media * {
+  margin-left: 0.5rem;
+  margin-top: 2rem;
+  color: #0A284C;
+}
+
+.bg-footer img{
+  position: absolute;
+  right: 27rem; 
+  width: 39rem;
+  height: 30rem;
 }
 
 /* RESPONSIVE STYLES */
@@ -397,9 +677,9 @@ margin-left: 2rem;
     color: #fff;
   }
 
-  #logo {
-    width: auto;
-    height: 30px;
+  .logo {
+    position: absolute;
+    width: 0.3rem;
   }
 
   .icon {
@@ -409,12 +689,4 @@ margin-left: 2rem;
   #cta-banner h3 {
     line-height: 1.3;
   }
-}
-#center-content{
-  position: relative;
-  width: 100%;
-  height: 80rem;
-  background-color: #ffffff;
-  border-top-left-radius: 3rem;
-  border-top-right-radius: 3rem;
 }
